fix price history